Revision history for Math::GrahamFunction

0.02001     2014-01-31
    - Update the link to the repository to the bitbucket.org one.
    - Minimum version of perl (CPANTS).

0.02000     2009-06-23
    - Converted the license in Build.PL to 'mit'.
    - Test::Run-enabled the distribution.
    - Added keywords and the repository location to the META.yml.

0.01001     2007-02-05

    - Moved List::Util and Class::Accessor to "requires" instead of
    "build_requires" inside the Build.PL in accordance to the rule that
    modules that are required to run the module after building should be
    in "requires".
    - Added a note about the optimization's side-effects in the known bugs.
    - Added MJD, imacat and David Golden to the Acknowledgements' section.

0.01        2007-01-09

    - First version, released on an unsuspecting world.
