@@ -14,5 +14,7 @@ lib/Math/GrahamFunction/SqFacts/Dipole.pm
 t/00-load.t
 t/01-results.t
 t/boilerplate.t
+t/cpan-changes.t
 t/pod-coverage.t
 t/pod.t
+t/style-trailing-space.t
