@@ -3,6 +3,7 @@ Revision history for Math::GrahamFunction
 0.02001     2014-01-31
     - Update the link to the repository to the bitbucket.org one.
     - Minimum version of perl (CPANTS).
+    - Add t/cpan-changes.t and t/style-trailing-space.t .
 
 0.02000     2009-06-23
     - Converted the license in Build.PL to 'mit'.
